feat: support dynamic namespace and flowId in ForEachItem